--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "build": "node app.js build"
+    "start": "concurrently \"npm run watch:node\" \"npm run watch:css\"",
+    "build": "npm run build:css && npm run build:node",
+    "watch:node": "node app.js",
+    "build:node": "node app.js build",
+    "build:css": "postcss src/css/input.css -o public/css/style.css",
+    "watch:css": "postcss src/css/input.css -o public/css/style.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
+    "concurrently": "^9.2.1",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "tailwindcss": "^4.0.0"
+  }
 }
